--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "katex": "^0.16.22",
     "markdown-to-jsx": "^7.7.8",
     "marked": "^15.0.12",
-    "next": "15.3.4",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "prismjs": "^1.30.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-share": "^5.2.2",
     "rehype-highlight": "^7.0.2",
@@ -43,7 +43,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.3.4",
+    "eslint-config-next": "^16.0.10",
     "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
