--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.11.1",
     "katex": "^0.16.22",
+    "lucide-react": "^0.563.0",
     "markdown-to-jsx": "^7.7.8",
     "marked": "^15.0.12",
     "next": "^16.0.10",
